rye/tests/ui/compile-fail/sendness.stderr
error: only '?Send' or '!Send' is accepted
 --> $DIR/sendness.rs:3:13
  |
3 | #[rye::test(non_send)]
  |             ^^^^^^^^

error: accepted only for async functions
  --> $DIR/sendness.rs:10:13
   |
10 | #[rye::test(?Send)]
   |             ^^^^^
